# lemma

./: Cargo.toml  README.md
examples/: fibonacci.lm  fizzbuzz.lm  hello-world.lm
src/: args.rs  ast.rs  errors.rs  grammar.rs  interpreter.rs  lexer.rs  lib.rs  log.rs  main.rs  parser.rs  printer.rs  scanner.rs  tokens.rs  utils.rs
src/interpreter/: arguments.rs  calls.rs  data.rs  environment.rs  expressions.rs  functions.rs  operations.rs  prelude.rs
tests/: ast.rs  functions.rs  interpreter.rs  lexer.rs  main.rs  strsplit.rs
