[package]
name = "lemma"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.0.4"
serde = { version = "1.0 ", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
log = "0.4.21"
